FIX: tweak alignment of select-kit in navigation bar

--- a/app/assets/stylesheets/common/base/_topic-list.scss
+++ b/app/assets/stylesheets/common/base/_topic-list.scss
@@ -13,7 +13,6 @@
 
     &.categories-admin-dropdown, &.category-notifications-button, &.tag-notifications-button {
       float: right;
-      margin-left: 8px;
     }
   }
 }
